Moved fixed elements to HTML, added clear to replace results with new search, started pulling other data into result list

--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
-#page{
+#page {
     border: 5px solid magenta;
 }
 
-.search {
+#search {
     border: 5px solid lightblue;
 }
 
-.results {
-    border: 5px solid salmon;
+#results {
+    border: 5px solid black;
+}
+
+.songs {
+    border: 5px solid green;
 }
